fixed bug on small screen

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
 
 }
 
+.big-container{
+    width: 90%;
+    margin: 0 auto;
+}
 .qr-comp{
     max-width: 375px;
     border-radius: 15px;
